added builtin commands

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,8 +1,6 @@
 
-The contributors to this project are;
+#This file lists all contributors to this repository
 
-	Mohamed Mouyahada
-	E-mail : mouyahada@gmail.com
+	Mohamed Mouyahada <mouyahada@gmail.com>
+	Peace Chimamaka <peaceamaka111@gmail.com>
 
-	Peace Chimamaka
-	Email : peaceamaka111@gmail.com
